# gatebench

./: .gitignore  .gitmodules  README.md  TODO.md  gatebench.c  meson.build  meson_options.txt
include/: gatebench.h  gatebench_bench.h  gatebench_cli.h  gatebench_fzsync_compat.h  gatebench_gate.h  gatebench_nl.h  gatebench_proof.h  gatebench_race.h  gatebench_selftest.h  gatebench_stats.h  gatebench_util.h  tst_fuzzy_sync.h
src/: bench.c  bench_internal.h  cli.c  gate_msg.c  main.c  meson.build  nl.c  proof.c  race.c  selftest.c  stats.c  util.c
src/selftests/: selftest_common.c  selftest_common.h  selftest_tests.h  test_attr_matrix.c  test_bad_attribute_size.c  test_base_time_update.c  test_clockid_variants.c  test_create_bad_clockid.c  test_create_empty_entries.c  test_create_missing_entries.c  test_create_missing_parms.c  test_create_zero_interval.c  test_cycle_time_derivation.c  test_cycle_time_ext_parsing.c  test_cycle_time_supplied.c  test_dump_correctness.c  test_duplicate_create.c  test_entry_corner_cases.c  test_entry_defaults.c  test_entry_index_cases.c  test_gate_timer_start_logic.c  test_internal_schedule.c  test_invalid_action_control.c  test_invalid_entry_attrs.c  test_large_dump.c  test_malformed_nesting.c  test_multiple_entries.c  test_param_validation.c  test_priority_flags.c  test_replace_append_entries.c  test_replace_invalid.c  test_replace_persistence.c  test_replace_preserve_attrs.c  test_replace_preserve_schedule.c  test_replace_rcu_snapshot.c  test_replace_without_existing.c  test_timer_list_expiry.c
tests/: expected.json
tools/: bench_compare.py  bench_sweep.sh  build_deps.sh
