# gatebench build options

option('install_headers',
  type: 'boolean',
  description: 'Install development headers',
  value: false
)

option('verbose_logs',
  type: 'boolean',
  description: 'Enable verbose logging',
  value: false
)

option('pcap',
  type: 'feature',
  description: 'Enable libpcap capture support',
  value: 'auto'
)
